--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -4,8 +4,6 @@
 #------------------------------------------------------------------------------
 cmake_minimum_required(VERSION 2.8)
 
-project(rtype_client)
-
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 #------------------------------------------------------------------------------
@@ -22,7 +20,7 @@ endforeach(HEADER_FILE)
 #------------------------------------------------------------------------------
 # Add executables
 #------------------------------------------------------------------------------
-add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
+add_executable(${CMAKE_PROJECT_NAME}_client ${SOURCE_FILES})
 
 #------------------------------------------------------------------------------
 # Compiler flags
@@ -31,17 +29,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++14")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wfatal-errors")
 
 #------------------------------------------------------------------------------
-# Packages
-#------------------------------------------------------------------------------
-# - SFML
-#------------------------------------------------------------------------------
-find_package(SFML COMPONENTS audio graphics system window)
-
-include_directories(${SFML_INCLUDE_DIRS})
-
-#------------------------------------------------------------------------------
 # Link options
 #------------------------------------------------------------------------------
-target_link_libraries(${CMAKE_PROJECT_NAME}
+target_link_libraries(${CMAKE_PROJECT_NAME}_client
+                      ${TINYXML2_LIBRARIES}
                       ${SFML_LIBRARIES})
 
