--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -4,8 +4,6 @@
 #------------------------------------------------------------------------------
 cmake_minimum_required(VERSION 2.8)
 
-project(rtype_server)
-
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 #------------------------------------------------------------------------------
@@ -22,7 +20,7 @@ endforeach(HEADER_FILE)
 #------------------------------------------------------------------------------
 # Add executables
 #------------------------------------------------------------------------------
-add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
+add_executable(${CMAKE_PROJECT_NAME}_server ${SOURCE_FILES})
 
 #------------------------------------------------------------------------------
 # Compiler flags
@@ -33,5 +31,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wfatal-errors")
 #------------------------------------------------------------------------------
 # Link options
 #------------------------------------------------------------------------------
-target_link_libraries(${CMAKE_PROJECT_NAME})
+target_link_libraries(${CMAKE_PROJECT_NAME}_server
+                      ${TINYXML2_LIBRARIES}
+                      ${SFML_LIBRARIES})
 
