--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,15 +1,16 @@
 #------------------------------------------------------------------------------
 # CMakeLists.txt
-# for ModularGameEngine
 #------------------------------------------------------------------------------
 cmake_minimum_required(VERSION 2.8)
+
+project(rtype)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 #------------------------------------------------------------------------------
 # Get source files
 #------------------------------------------------------------------------------
-file(GLOB_RECURSE SOURCE_FILES source/*.cpp ../engine/*.cpp)
+file(GLOB_RECURSE SOURCE_FILES source/*.cpp)
 file(GLOB_RECURSE HEADER_FILES include/*.hpp ../engine/*.hpp)
 
 foreach(HEADER_FILE ${HEADER_FILES})
@@ -21,6 +22,7 @@ endforeach(HEADER_FILE)
 # Add executables
 #------------------------------------------------------------------------------
 add_executable(${CMAKE_PROJECT_NAME}_client ${SOURCE_FILES})
+add_dependencies(${CMAKE_PROJECT_NAME}_client ${CMAKE_PROJECT_NAME}_engine)
 
 #------------------------------------------------------------------------------
 # Compiler flags
@@ -33,5 +35,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wfatal-errors")
 #------------------------------------------------------------------------------
 target_link_libraries(${CMAKE_PROJECT_NAME}_client
                       ${TINYXML2_LIBRARIES}
-                      ${SFML_LIBRARIES})
+                      ${SFML_LIBRARIES}
+                      ${CMAKE_PROJECT_NAME}_engine)
 
