--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,6 +1,5 @@
 #------------------------------------------------------------------------------
 # CMakeLists.txt
-# for ModularGameEngine
 #------------------------------------------------------------------------------
 cmake_minimum_required(VERSION 2.8)
 
@@ -12,7 +11,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Get source files
 #------------------------------------------------------------------------------
 file(GLOB_RECURSE SOURCE_FILES source/*.cpp)
-file(GLOB_RECURSE HEADER_FILES include/*.hpp ../engine/*.hpp)
+file(GLOB_RECURSE HEADER_FILES include/*.hpp)
 
 foreach(HEADER_FILE ${HEADER_FILES})
 	get_filename_component(HEADER_DIRECTORY ${HEADER_FILE} DIRECTORY)
@@ -22,20 +21,11 @@ endforeach(HEADER_FILE)
 #------------------------------------------------------------------------------
 # Add executables
 #------------------------------------------------------------------------------
-add_executable(${CMAKE_PROJECT_NAME}_server ${SOURCE_FILES})
-add_dependencies(${CMAKE_PROJECT_NAME}_server ${CMAKE_PROJECT_NAME}_engine)
+add_library(${CMAKE_PROJECT_NAME}_engine STATIC ${SOURCE_FILES})
 
 #------------------------------------------------------------------------------
 # Compiler flags
 #------------------------------------------------------------------------------
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++14")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wfatal-errors")
-
-#------------------------------------------------------------------------------
-# Link options
-#------------------------------------------------------------------------------
-target_link_libraries(${CMAKE_PROJECT_NAME}_server
-                      ${TINYXML2_LIBRARIES}
-                      ${SFML_LIBRARIES}
-                      ${CMAKE_PROJECT_NAME}_engine)
 
