[game] New folder added. Will only contain the game-related code.

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,6 +1,5 @@
 #------------------------------------------------------------------------------
 # CMakeLists.txt
-# for ModularGameEngine
 #------------------------------------------------------------------------------
 cmake_minimum_required(VERSION 2.8)
 
@@ -12,7 +11,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Get source files
 #------------------------------------------------------------------------------
 file(GLOB_RECURSE SOURCE_FILES source/*.cpp)
-file(GLOB_RECURSE HEADER_FILES include/*.hpp ../engine/*.hpp ../game/*.hpp)
+file(GLOB_RECURSE HEADER_FILES include/*.hpp ../engine/include/*.hpp)
 
 foreach(HEADER_FILE ${HEADER_FILES})
 	get_filename_component(HEADER_DIRECTORY ${HEADER_FILE} DIRECTORY)
@@ -22,21 +21,12 @@ endforeach(HEADER_FILE)
 #------------------------------------------------------------------------------
 # Add executables
 #------------------------------------------------------------------------------
-add_executable(${CMAKE_PROJECT_NAME}_server ${SOURCE_FILES})
-add_dependencies(${CMAKE_PROJECT_NAME}_server ${CMAKE_PROJECT_NAME}_game)
+add_library(${CMAKE_PROJECT_NAME}_game STATIC ${SOURCE_FILES})
+add_dependencies(${CMAKE_PROJECT_NAME}_game ${CMAKE_PROJECT_NAME}_engine)
 
 #------------------------------------------------------------------------------
 # Compiler flags
 #------------------------------------------------------------------------------
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++14")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wfatal-errors")
-
-#------------------------------------------------------------------------------
-# Link options
-#------------------------------------------------------------------------------
-target_link_libraries(${CMAKE_PROJECT_NAME}_server
-                      ${TINYXML2_LIBRARIES}
-                      ${SFML_LIBRARIES}
-                      ${CMAKE_PROJECT_NAME}_game
-                      ${CMAKE_PROJECT_NAME}_engine)
 
