--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ include_directories(${SFML_INCLUDE_DIRS})
 # Subdirectories
 #------------------------------------------------------------------------------
 add_subdirectory(engine)
+add_subdirectory(game)
 add_subdirectory(client)
 add_subdirectory(server)
 
