--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -36,7 +36,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wfatal-errors")
 #------------------------------------------------------------------------------
 target_link_libraries(${CMAKE_PROJECT_NAME}_server
                       ${TINYXML2_LIBRARIES}
-                      ${SFML_LIBRARIES}
+                      ${SFML_GRAPHICS_LIBRARY}
+                      ${SFML_NETWORK_LIBRARY}
+                      ${SFML_SYSTEM_LIBRARY}
                       ${CMAKE_PROJECT_NAME}_game
                       ${CMAKE_PROJECT_NAME}_engine)
 
