--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -36,9 +36,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wfatal-errors")
 #------------------------------------------------------------------------------
 target_link_libraries(${CMAKE_PROJECT_NAME}_server
                       ${TINYXML2_LIBRARIES}
+                      ${CMAKE_PROJECT_NAME}_game
+                      ${CMAKE_PROJECT_NAME}_engine
                       ${SFML_GRAPHICS_LIBRARY}
                       ${SFML_NETWORK_LIBRARY}
-                      ${SFML_SYSTEM_LIBRARY}
-                      ${CMAKE_PROJECT_NAME}_game
-                      ${CMAKE_PROJECT_NAME}_engine)
+                      ${SFML_SYSTEM_LIBRARY})
 
