[server] Now the same socket is reused for every game.

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -36,5 +36,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wfatal-errors")
 target_link_libraries(${CMAKE_PROJECT_NAME}_client
                       ${TINYXML2_LIBRARIES}
                       ${CMAKE_PROJECT_NAME}_engine
-                      ${SFML_LIBRARIES})
+                      sfml-audio
+                      sfml-graphics
+                      sfml-network
+                      sfml-system)
 
