--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -38,6 +38,6 @@ target_link_libraries(${CMAKE_PROJECT_NAME}_server
                       ${TINYXML2_LIBRARIES}
                       ${CMAKE_PROJECT_NAME}_game
                       ${CMAKE_PROJECT_NAME}_engine
-                      ${SFML_NETWORK_LIBRARY}
-                      ${SFML_SYSTEM_LIBRARY})
+                      sfml-network
+                      sfml-system)
 
