Now using GameKit scene system.

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Get source files
 #------------------------------------------------------------------------------
 file(GLOB_RECURSE SOURCE_FILES source/*.cpp)
-file(GLOB_RECURSE HEADER_FILES include/*.hpp ../engine/*.hpp ../game/*.hpp)
+file(GLOB_RECURSE HEADER_FILES include/*.hpp ../game/*.hpp)
 
 foreach(HEADER_FILE ${HEADER_FILES})
 	get_filename_component(HEADER_DIRECTORY ${HEADER_FILE} DIRECTORY)
@@ -22,7 +22,7 @@ endforeach(HEADER_FILE)
 # Add executables
 #------------------------------------------------------------------------------
 add_executable(${CMAKE_PROJECT_NAME}_client ${SOURCE_FILES})
-add_dependencies(${CMAKE_PROJECT_NAME}_client ${CMAKE_PROJECT_NAME}_engine)
+add_dependencies(${CMAKE_PROJECT_NAME}_client ${CMAKE_PROJECT_NAME}_game)
 
 #------------------------------------------------------------------------------
 # Compiler flags
@@ -43,5 +43,5 @@ target_link_libraries(${CMAKE_PROJECT_NAME}_client
                       ${TINYXML2_LIBRARIES}
                       ${GAMEKIT_LIBRARIES}
                       sfml-network
-                      ${CMAKE_PROJECT_NAME}_engine)
+                      ${CMAKE_PROJECT_NAME}_game)
 
