--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Get source files
 #------------------------------------------------------------------------------
 file(GLOB_RECURSE SOURCE_FILES source/*.cpp)
-file(GLOB_RECURSE HEADER_FILES include/*.hpp ../engine/include/*.hpp)
+file(GLOB_RECURSE HEADER_FILES include/*.hpp)
 
 foreach(HEADER_FILE ${HEADER_FILES})
 	get_filename_component(HEADER_DIRECTORY ${HEADER_FILE} DIRECTORY)
@@ -22,7 +22,6 @@ endforeach(HEADER_FILE)
 # Add executables
 #------------------------------------------------------------------------------
 add_library(${CMAKE_PROJECT_NAME}_game STATIC ${SOURCE_FILES})
-add_dependencies(${CMAKE_PROJECT_NAME}_game ${CMAKE_PROJECT_NAME}_engine)
 
 #------------------------------------------------------------------------------
 # Compiler flags
