--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,61 +39,13 @@ link_directories(${TINYXML2_LIBRARY_DIRS})
 #------------------------------------------------------------------------------
 # - SFML
 #------------------------------------------------------------------------------
-find_package(SFML COMPONENTS network)
+find_package(SFML COMPONENTS audio graphics network system window REQUIRED)
+
 if(NOT SFML_FOUND)
 	message(FATAL_ERROR "SFML is needed to build the project. Please install it correctly.")
 endif()
 
 include_directories(${SFML_INCLUDE_DIRS})
-
-#------------------------------------------------------------------------------
-# - OpenGL
-#------------------------------------------------------------------------------
-set(OpenGL_GL_PREFERENCE "LEGACY")
-
-find_package(OpenGL REQUIRED)
-find_package(GLM REQUIRED)
-
-if(NOT OPENGL_FOUND)
-	message(FATAL_ERROR "OpenGL not found!")
-endif(NOT OPENGL_FOUND)
-
-if(NOT GLM_FOUND)
-	message(FATAL_ERROR "glm not found!")
-endif(NOT GLM_FOUND)
-
-include_directories(${GLM_INCLUDE_DIRS})
-
-#------------------------------------------------------------------------------
-# - SDL2, SDL2_image, SDL2_mixer
-#------------------------------------------------------------------------------
-include(FindPkgConfig)
-
-pkg_search_module(SDL2 REQUIRED sdl2)
-pkg_search_module(SDL2IMAGE REQUIRED SDL2_image)
-pkg_search_module(SDL2MIXER REQUIRED SDL2_mixer)
-pkg_search_module(SDL2TTF REQUIRED SDL2_ttf)
-
-if(NOT SDL2_FOUND)
-	message(FATAL_ERROR "SDL2 not found!")
-endif(NOT SDL2_FOUND)
-
-if(NOT SDL2IMAGE_FOUND)
-	message(FATAL_ERROR "SDL2_image not found!")
-endif(NOT SDL2IMAGE_FOUND)
-
-if(NOT SDL2MIXER_FOUND)
-	message(FATAL_ERROR "SDL2_mixer not found!")
-endif(NOT SDL2MIXER_FOUND)
-
-if(NOT SDL2TTF_FOUND)
-	message(FATAL_ERROR "SDL2_ttf not found!")
-endif(NOT SDL2TTF_FOUND)
-
-include_directories(${SDL2_INCLUDE_DIRS}
-                    ${SDL2IMAGE_INCLUDE_DIRS}
-                    ${SDL2MIXER_INCLUDE_DIRS}
-                    ${SDL2TTF_INCLUDE_DIRS})
 
 #------------------------------------------------------------------------------
 # Subdirectories
