--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -28,4 +28,5 @@ add_library(${CMAKE_PROJECT_NAME}_game STATIC ${SOURCE_FILES})
 #------------------------------------------------------------------------------
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++14")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wfatal-errors")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG_ENABLED")
 
